# FLAMA

./: MMI_butterfly_tipo_A.ipynb  MMI_butterfly_tipo_B.ipynb  MMI_butterfly_tipo_C.ipynb  MMI_butterfly_tipo_D.ipynb  MMI_create.ipynb  README.md  pyproject.toml
MMI_solver/: __init__.py  funciones.py
